syntax = "proto3";

option csharp_namespace = "GrpcGreeter";

package greet;


service Checker {
	// Sends a greeting
	rpc CheckEndpoint (EndpointCheckRequest) returns (EndpointCheckReply);
	rpc HeartbeatCheck (HeartbeatCheckRequest) returns (HeartbeatCheckReply);
}

// The request message containing the user's name.
message EndpointCheckRequest {
	string content = 1;
}

// The response message containing the greetings.
message EndpointCheckReply {
	string content = 1;
}
// The request message containing the user's name.
message HeartbeatCheckRequest { }

// The response message containing the greetings.
message HeartbeatCheckReply {
	bool reply = 1;
}


